--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -250,23 +250,6 @@ table {
 
 /* End of test link */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .sidebarLink,
 .footerText,
 .username,
@@ -379,8 +362,7 @@ table {
   z-index: -1;
 }
 
-/* PetProfile - PetProfileCard */
-/* Dashboard - userPetCard */
+/* Dashboard */
 .dashboardContainer {
   display: flex;
   flex-wrap: wrap;
@@ -406,93 +388,7 @@ table {
   width: 50%;
 }
 
-.userPetCardContainer {
-  padding: 0 0 60px 0;
-}
-
-.userPetCardContainer,
-.petProfileContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.petProfileContainer {
-  padding-top: 120px;
-}
-
-.userPetCardSelected
-.userPetCard,
-.petProfileCard {
-  background: var(--clr-white);
-  border-radius: var(--radius);  
-  display: flex;
-  padding: 50px;
-  justify-content: center;
-  align-items: center;
-  max-height: 70%;
-} 
-
-.userPetCard,
-.petProfileCard {
-  box-shadow: var(--shadow);
-}
-
-/* .userPetCardSelected {
-  box-shadow: var(--shadow-selected);
-} */
-
-.petProfileCard {
-  width: 70%;
-} 
-
-/* .userPetCardSelected, */
-.userPetCard {
-  width: 100%;
-}
-
-.userPetCardInner,
-.petProfileCardInner {
-  display: flex;
-  width: 100%;
-  min-height: 600px;
-}
-
-.userPetCardPictureContainer,
-.petProfilePictureContainer {
-  position: relative;
-  overflow: hidden;
-  background: var(--clr-brown); 
-  width: 50%;
-  position: relative;
-  overflow: hidden;
-}
-
-.userPetCardPicture,
-.petProfilePicture {
-  position: absolute;
-  top: 50%;    
-  left: 50%;
-  right: 50%;
-  margin: auto;
-  transform: translate( -50%, -50%);
-  object-fit: cover;
-  min-height: 100%;
-  min-width: 100%;
-  max-height: 150%;
-  max-width: 150%;
-}
-
-.userPetCardTextBox,
-.petProfileTextBox {
-    padding: 0 0 0 40px;
-    border-left: 0;
-    min-height: 300px;
-    width: 50%;
-    overflow-wrap: break-word;
-}
-
-/* Lost & Found - PetList */
+/* Lost & Found */
 .petMain {
   font-family: var(--font-family);
   background: var(--clr-palebrown);
@@ -512,40 +408,43 @@ table {
   text-align: center;
 }
 
-.petContainer {
+/* Beginning of petCards: PetListCard, PetProfileCard, PetUserCard */
+.petListContainer {
 	display: flex;
 	flex-wrap: wrap;
   justify-content: center;
   min-height: 100vh;
 }
 
-.petCard {
+.userpetListCard,
+.petListCard {
   background: var(--clr-white); 
   border-radius: var(--radius); 
   box-shadow: var(--shadow);
+  padding: 50px;
+}
+
+.petListCard {
   margin-bottom: 60px;
   margin-right: 30px;
   margin-left: 30px;
-  padding: 50px;
-} 
+}
 
-.petTextBox {
-  /* padding: 40px; */
+.petListTextBox {
   padding: 40px 0 0 0;
-  border: 4px solid var(--clr-palebrown);
   border-top: 0;
   min-height: 300px;
   overflow-wrap: break-word;
 }
 
-.petPictureContainer {
+.petListPictureContainer {
   position: relative;
   overflow: hidden;
   background: var(--clr-brown);
-  height: 350px;
+  height: 280px;
 }
 
-.petPicture {
+.petListPicture {
   position: absolute;
   top: 50%;    
   left: 50%;
@@ -558,6 +457,93 @@ table {
   max-height: 150%;
   max-width: 150%;
 }
+
+.userpetListCardContainer {
+  padding: 0 0 60px 0;
+}
+
+.userpetListCardContainer,
+.petProfileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.petProfileContainer {
+  padding-top: 120px;
+}
+
+.userpetListCard,
+.petProfileCard {
+  background: var(--clr-white);
+  border-radius: var(--radius);  
+  display: flex;
+  padding: 50px;
+  justify-content: center;
+  align-items: center;
+  max-height: 70%;
+} 
+
+.userpetListCard,
+.petProfileCard {
+  box-shadow: var(--shadow);
+}
+
+
+.petProfileCard {
+  width: 70%;
+} 
+
+.userpetListCard {
+  width: 100%;
+}
+
+.petProfileCardInner {
+  min-height: 600px;
+}
+
+.userpetListCardInner,
+.petProfileCardInner {
+  display: flex;
+  width: 100%;
+  min-height: 600px;
+}
+
+.userpetListCardPictureContainer,
+.petProfilePictureContainer {
+  position: relative;
+  overflow: hidden;
+  background: var(--clr-brown); 
+  width: 50%;
+  position: relative;
+  overflow: hidden;
+}
+
+.userpetListCardPicture,
+.petProfilePicture {
+  position: absolute;
+  top: 50%;    
+  left: 50%;
+  right: 50%;
+  margin: auto;
+  transform: translate( -50%, -50%);
+  object-fit: cover;
+  min-height: 100%;
+  min-width: 100%;
+  max-height: 150%;
+  max-width: 150%;
+}
+
+.userpetListCardTextBox,
+.petProfileTextBox {
+    padding: 0 0 0 40px;
+    border-left: 0;
+    min-height: 300px;
+    width: 50%;
+    overflow-wrap: break-word;
+}
+
+/* End of PetCards */
 
 .petStatus {
   font: 500 15px/1.2 'Poppins', sans-serif;
@@ -1497,6 +1483,27 @@ input[type=checkbox]:checked ~ label{
     min-height: 1000px;
   }
 
+
+  .userpetListCard,
+  .petProfileCard,
+  .petListCard {
+    padding: 0;
+  }
+
+  .userpetListCardPictureContainer,
+  .petProfilePictureContainer,
+  .petListPictureContainer {
+    border-radius: 25px 25px 0 0;
+  }
+
+  .userpetListCardTextBox,
+  .petProfileTextBox,
+  .petListTextBox {
+    border: none;
+    padding: 50px;
+  }
+
+
 }
 
 @media only screen and (min-width: 400px) and (max-width: 600px) {
@@ -1568,28 +1575,35 @@ input[type=checkbox]:checked ~ label{
 
 } 
 
+/* Organise this part below:  */
 @media only screen and (min-width: 200px) {
   .formBox {
     width: 150%;
   }
   
-  /* .userPetCard, */
+  .userpetListCard,
   .petProfileCard,
-  .petCard {
+  .petListCard {
     padding: 0;
     width: 80%;
+    border-radius: 25px;
   }
   
-  .userPetCardPictureContainer,
+  .userpetListCardPictureContainer,
   .petProfilePictureContainer,
-  .petPictureContainer {
+  .petListPictureContainer {
     border-radius: 25px 25px 0 0;
   }
 
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox,
-  .petTextBox {
+  .petListTextBox {
     border-radius: 0 0 25px 25px;
+  }
+
+  .userpetListCardTextBox,
+  .petListTextBox {
+    padding: 50px;
   }
 
   .lostAndFoundHeadline {
@@ -1613,7 +1627,7 @@ input[type=checkbox]:checked ~ label{
     line-height: unset;
   } 
 
-  .userPetCardInner,
+  .userpetListCardInner,
   .petProfileCardInner {
     display: flex;
     flex-direction: column;
@@ -1621,7 +1635,7 @@ input[type=checkbox]:checked ~ label{
     min-height: unset;
   }
 
-  .userPetCardPictureContainer,
+  .userpetListCardPictureContainer,
   .petProfilePictureContainer {
     display: flex;
     flex-direction: column;
@@ -1635,7 +1649,7 @@ input[type=checkbox]:checked ~ label{
     width: 100%;
   }
 
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox {
     width: auto;
     border: none;
@@ -1651,7 +1665,7 @@ input[type=checkbox]:checked ~ label{
     width: auto;
   }
 
-  .petTextBox {
+  .petListTextBox {
     border: none;
   }
   
@@ -1662,16 +1676,15 @@ input[type=checkbox]:checked ~ label{
     width: 120%;
   }
 
-  /* .userPetCard, */
   .petProfileCard,
-  .petCard {
+  .petListCard {
     padding: 0;
     width: 80%;
   }
   
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox {
-    padding: 40px;
+    padding: 50px;
   }
 
 }
@@ -1682,19 +1695,19 @@ input[type=checkbox]:checked ~ label{
     width: 120%;
   }
 
-  .petCard {
+  .petListCard {
     padding: 50px;
   }
 
   .petProfileCard,
-  .petCard {
+  .petListCard {
     padding: 0;
     width: 80%;
   }
 
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox {
-    padding: 40px;
+    padding: 50px;
   }
 
 } 
@@ -1705,7 +1718,7 @@ input[type=checkbox]:checked ~ label{
   }
 
   .petProfileCard,
-  .petCard {
+  .petListCard {
     padding: 0;
     width: 80%;
   }
@@ -1719,29 +1732,27 @@ input[type=checkbox]:checked ~ label{
   }
 
   .petProfileCard,
-  .petCard {
+  .petListCard {
     width: 70%;
     padding: 50px;
   }
 
-  .userPetCardPictureContainer,
+  .userpetListCardPictureContainer,
   .petProfilePictureContainer,
-  .petPictureContainer {
+  .petListPictureContainer {
     border-radius: 0;
   }
 
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox,
-  .petTextBox {
+  .petListTextBox {
     border-radius: 0;
-    /* border: 4px solid var(--clr-palebrown); */
     padding: 40px 0 0 0;
     border-top: 0;
   }
 
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox {
-    /* border: 4px solid var(--clr-palebrown); */
     border-top: 0;
   }
 
@@ -1756,7 +1767,7 @@ input[type=checkbox]:checked ~ label{
     width: 90%;
   }
 
-  .petCard {
+  .petListCard {
     width: 70%;
   }
 
@@ -1783,7 +1794,7 @@ input[type=checkbox]:checked ~ label{
     width: 50%;
   }
 
-  .petCard {
+  .petListCard {
     width: 70%;
   }
 
@@ -1794,22 +1805,22 @@ input[type=checkbox]:checked ~ label{
     width: 50%;
   }
 
-  .petCard {
+  .petListCard {
     width: 30%;
   }
 
-  .userPetCardContainer {
+  .userpetListCardContainer {
     padding: 0 0 60px 0;
   }
 
-  .userPetCardContainer,
+  .userpetListCardContainer,
   .petProfileContainer {
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .userPetCardContainer {
+  .userpetListCardContainer {
     min-width: 60%;
     padding: 0 0 60px 0;
   }
@@ -1818,8 +1829,7 @@ input[type=checkbox]:checked ~ label{
     padding-top: 120px;
   }
 
-  /* .userPetCardSelected, */
-  .userPetCard,
+  .userpetListCard,
   .petProfileCard {  
     background: var(--clr-white);
     display: flex;
@@ -1829,21 +1839,17 @@ input[type=checkbox]:checked ~ label{
     border-radius: var(--radius); 
   }
 
-  .userPetCard,
+  .userpetListCard,
   .petProfileCard {  
     box-shadow: var(--shadow);
   }
-
-  /* .userPetCardSelected {
-    box-shadow: var(--shadow-selected);
-  } */
 
   .petProfileCard {
     width: 70%;
     max-height: 70%;
   } 
   
-  .userPetCardInner,
+  .userpetListCardInner,
   .petProfileCardInner {
     display: flex;
     width: 100%;
@@ -1855,7 +1861,7 @@ input[type=checkbox]:checked ~ label{
     min-height: 600px;
   }
 
-  .userPetCardPictureContainer,
+  .userpetListCardPictureContainer,
   .petProfilePictureContainer {
     position: relative;
     overflow: hidden;
@@ -1869,7 +1875,7 @@ input[type=checkbox]:checked ~ label{
     border-radius: unset;
   }
 
-  .userPetCardPicture,
+  .userpetListCardPicture,
   .petProfilePicture {
     position: absolute;
     top: 50%;    
@@ -1884,7 +1890,7 @@ input[type=checkbox]:checked ~ label{
     max-width: 150%;
   }
   
-  .userPetCardTextBox,
+  .userpetListCardTextBox,
   .petProfileTextBox {
     padding: 0 0 0 40px;
     border-left: 0;
@@ -1905,7 +1911,7 @@ input[type=checkbox]:checked ~ label{
 }
 
 @media only screen and (min-width: 1600px) {
-  .petCard {
+  .petListCard {
     width: 20%;
   }
 }
@@ -1915,10 +1921,12 @@ input[type=checkbox]:checked ~ label{
     width: 30%;
   }
 
-  .petCard {
+  .petListCard {
     width: 15%;
   }
-} 
+}  
+
+
 
 
 
